log
Thu 28 Sep 2023 01:10:27 PM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:19: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   39 |   Nuevo->heapArray=(int*) malloc(sizeof(int) * Nuevo->capac);
      |                   ^
cc1: all warnings being treated as errors
Compilation failed
068fd16
Thu 28 Sep 2023 01:12:54 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:20: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   39 |   Nuevo->heapArray = (int*) malloc(sizeof(int) * Nuevo->capac);
      |                    ^
cc1: all warnings being treated as errors
Compilation failed
051fb74
Thu 28 Sep 2023 01:14:00 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
4e1a374
Thu 28 Sep 2023 01:20:45 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:25: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   22 |     return pq->heapArray[0];
      |            ~~~~~~~~~~~~~^~~
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d258ccf
Thu 28 Sep 2023 01:20:58 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
669fa66
Thu 28 Sep 2023 01:25:21 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
14766c1
Thu 28 Sep 2023 01:26:23 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
d4f6f83
Thu 28 Sep 2023 01:26:45 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
082b6ef
Thu 28 Sep 2023 01:27:15 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
2647169
Thu 28 Sep 2023 01:27:46 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|2
total_score: 20/70
413cfa5
Thu 28 Sep 2023 01:32:52 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
17742d0
Thu 28 Sep 2023 01:34:38 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:37:20: error: ‘p’ undeclared (first use in this function); did you mean ‘pq’?
   37 |   Nuevo.priority = p;
      |                    ^
      |                    pq
heap.c:37:20: note: each undeclared identifier is reported only once for each function it appears in
heap.c:35:12: error: variable ‘Nuevo’ set but not used [-Werror=unused-but-set-variable]
   35 |   heapElem Nuevo;
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
c94253c
Thu 28 Sep 2023 01:35:00 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:37:18: error: assignment to ‘int’ from ‘Heap *’ {aka ‘struct Heap *’} makes integer from pointer without a cast [-Werror=int-conversion]
   37 |   Nuevo.priority = pq;
      |                  ^
heap.c:35:12: error: variable ‘Nuevo’ set but not used [-Werror=unused-but-set-variable]
   35 |   heapElem Nuevo;
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
f3ed2ff
Thu 28 Sep 2023 01:36:31 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:37:18: error: assignment to ‘int’ from ‘Heap *’ {aka ‘struct Heap *’} makes integer from pointer without a cast [-Werror=int-conversion]
   37 |   Nuevo.priority = pq;
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
4c33d8f
Thu 28 Sep 2023 01:37:36 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:37:20: error: ‘p’ undeclared (first use in this function); did you mean ‘pq’?
   37 |   Nuevo.priority = p;
      |                    ^
      |                    pq
heap.c:37:20: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e5a3cc8
Thu 28 Sep 2023 01:38:24 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
d7ada0f
Thu 28 Sep 2023 01:45:56 PM UTC: 
 heap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
test.c: In function ‘heap_push’:
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
566bf75
Thu 28 Sep 2023 01:51:16 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘heap_push’:
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3b10db2
Thu 28 Sep 2023 01:52:02 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
4da6384
Thu 28 Sep 2023 01:52:21 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 25/70
8e3a686
Thu 28 Sep 2023 01:55:19 PM UTC: 
 heap.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
test.c: In function ‘heap_push’:
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3ad1e81
Thu 28 Sep 2023 02:07:22 PM UTC: 
 heap.c | 25 ++++++-------------------
 1 file changed, 6 insertions(+), 19 deletions(-)
 tests:  3|2
total_score: 25/70
2fdcb51
Thu 28 Sep 2023 02:15:03 PM UTC: 
 heap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
53affa6
Mon 16 Oct 2023 02:34:14 AM UTC: 
 heap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:67:31: error: variable ‘Padre’ set but not used [-Werror=unused-but-set-variable]
   67 |   int aux=0, HijoIz, HijoDer, Padre;
      |                               ^~~~~
heap.c:67:22: error: variable ‘HijoDer’ set but not used [-Werror=unused-but-set-variable]
   67 |   int aux=0, HijoIz, HijoDer, Padre;
      |                      ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ec94ab9
Mon 16 Oct 2023 02:34:31 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:71:5: error: ‘HijoDer’ undeclared (first use in this function)
   71 |     HijoDer = 2 * aux + 2;
      |     ^~~~~~~
heap.c:71:5: note: each undeclared identifier is reported only once for each function it appears in
heap.c:67:23: error: variable ‘Padre’ set but not used [-Werror=unused-but-set-variable]
   67 |   int aux=0, HijoIz,  Padre;
      |                       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
df8fe5e
Mon 16 Oct 2023 02:34:41 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:67:23: error: variable ‘Padre’ set but not used [-Werror=unused-but-set-variable]
   67 |   int aux=0, HijoIz,  Padre;
      |                       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
fa54db1
